fixing spacing on ace editor for cursor closes #400

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -951,9 +951,6 @@ variable */
   background-color: #AFAFAF !important;
 }
 
-.ace_content {
-    padding: 0em 0.5em !important;
-}
 
 .attribution {
     background-color: #eee;
@@ -2081,11 +2078,11 @@ footer {
   }
 
   #i18n {
-    margin-top: 0.75em;
+    margin-top: 0.75em !important;
   }
 
   body {
-    margin-top: -0.75em;
+    margin-top: -0.75em !important;
   }
 }
 
